--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ env_logger = "0.9.0"
 log = "0.4.14"
 serde = { version = "1.0.130", features = ["derive"] }
 sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "tls"] }
+tinytemplate = "1.2.1"
 tokio = { version = "1.14.0", features = ["full"] }
