--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ clap = "2.33.3"
 csv = "1.1.6"
 env_logger = "0.9.0"
 log = "0.4.14"
+itertools = "0.10.3"
 serde = { version = "1.0.130", features = ["derive"] }
 sqlx = { version = "0.5.9", features = ["runtime-tokio-rustls", "postgres", "chrono", "macros", "tls"] }
 tinytemplate = "1.2.1"
